descrição logo alterada

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="logo">
-      <h1>WALMART</h1>
+      <h1>LANDPAGE</h1>
     </div>
     <!-- Botão de menu hambúrguer -->
     <div class="menu-toggle" onclick="toggleMenu()">
