--- a/cards/card1.html
+++ b/cards/card1.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale.0">
+    <title>Card Example</title>
+    <link rel="stylesheet" href="/css/cards.css">
 </head>
 <body>
-    <h1>card1 exemplo</h1>
-</body>
-</html>
+
+    <div class="card">
+        <img src="../imagem/girl_fone.jpg" alt="Person listening to music">
+        <div class="card-content">
+            <h2>Card Title Here</h2>
+            <p>This is a brief description of the card's content. You can add more text here to explain what the user will find if they click "Saiba Mais."</p>
+            <a href="#" class="button">Saiba Mais</a>
+        </div>
+    </div>
