--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <main>
     <section>
       <a href="cards/card1.html" class="card-link">
-        <div class="card">Card 1</div>
+        <div class="card"><img src="imagem/girl_fone.jpg" alt="garota nova escutando musica fone ouvido"></div>
       </a>
       <a href="cards/card2.html" class="card-link">
         <div class="card">Card 2</div>
